scrollbar fix

--- a/src/components/CharacterList/characterList.css
+++ b/src/components/CharacterList/characterList.css
@@ -8,6 +8,10 @@
     scrollbar-width: none;
 }
 
+.character-container::-webkit-scrollbar {
+    display: none;
+}
+
 @media screen and (min-width: 992px) {
     .character-container {
         width: 70%;
